--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,9 @@
       content="Web site created using create-react-app"
     />
     <title>React App</title>
-    <script type="text/javascript" src="ueditor/ueditor.config.js"></script>
-    <script type="text/javascript" src="ueditor/ueditor.all.js"></script>
-    <script type="text/javascript" src="ueditor/lang/zh-cn/zh-cn.js"></script>
+    <script type="text/javascript" src="/ueditor/ueditor.config.js"></script>
+    <script type="text/javascript" src="/ueditor/ueditor.all.js"></script>
+    <script type="text/javascript" src="/ueditor/lang/zh-cn/zh-cn.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
